third_party/rust/async-trait/tests/ui/bare-trait-object.stderr
error: trait objects without an explicit `dyn` are deprecated
  --> tests/ui/bare-trait-object.rs:11:16
   |
11 | impl Trait for Send + Sync {
   |                ^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/ui/bare-trait-object.rs:1:9
   |
1  | #![deny(bare_trait_objects)]
   |         ^^^^^^^^^^^^^^^^^^
   = warning: this is accepted in the current edition (Rust 2018) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/warnings-promoted-to-error.html>
help: use `dyn`
   |
11 - impl Trait for Send + Sync {
11 + impl Trait for dyn Send + Sync {
   |
help: alternatively use a blanket implementation to implement `Trait` for all types that also implement `Send + Sync`
   |
11 | impl<T: Send + Sync> Trait for T {
   |     ++++++++++++++++           ~
